--- a/.github/actions/docker/action.yml
+++ b/.github/actions/docker/action.yml
@@ -78,6 +78,7 @@ runs:
         exit-code: 1
         severity: LOW,MEDIUM,HIGH,CRITICAL
         output: 'trivy-results.sarif'
+        scanners: vuln
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@b8d3b6e8af63cde30bdc382c0bc28114f4346c88 # ratchet:github/codeql-action/upload-sarif@v2
       with:
